# Poseidon

./: .gitignore  ARCH.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: poseidon-ci.yml
.superpowers/sdd/: task-5.1-report.md
app/: build.gradle.kts  poseidon-policy.yml
app/src/androidTest/java/tech/ssemaj/poseidon/: ExampleInstrumentedTest.kt  GrpcCronetBlockTest.kt  MmkvInterpositionTest.kt
app/src/androidTest/keepRules/: rules.keep
app/src/main/: AndroidManifest.xml
app/src/main/java/tech/ssemaj/poseidon/: CronetProbe.kt  EgressDashboardState.kt  HttpUrlProbe.kt  MainActivity.kt  OkHttpProbe.kt  PolicyInfo.kt  RawDnsProbe.kt  RawSyscallProbe.kt  VerifyState.kt  VolleyProbe.kt
app/src/main/java/tech/ssemaj/poseidon/control/: EnforcementGate.kt  PoseidonController.kt  PoseidonViewModel.kt  RuntimeEnforcementGate.kt  UiState.kt
app/src/main/java/tech/ssemaj/poseidon/probes/: DemoProbes.kt  DemoUrls.kt
app/src/main/java/tech/ssemaj/poseidon/ui/: PoseidonApp.kt
app/src/main/keepRules/: rules.keep
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: poseidon_policy.xml
app/src/test/java/tech/ssemaj/poseidon/: ExampleUnitTest.kt
app/src/test/java/tech/ssemaj/poseidon/control/: PoseidonControllerTest.kt
docs/: design-patterns.md  poseidon-allowlist-techniques.md  poseidon-findings.md
docs/superpowers/plans/: 2026-06-25-poseidon-rearchitecture.md  2026-06-30-sample-app-revamp-phase1.md  2026-06-30-sample-app-revamp-phase2.md
docs/superpowers/specs/: 2026-06-24-poseidon-network-guard-design.md  2026-06-25-poseidon-rearchitecture-design.md  2026-06-30-sample-app-revamp-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
poseidon-all/: README.md  build.gradle.kts
poseidon-all/src/main/java/tech/ssemaj/poseidon/all/: PoseidonAll.kt
poseidon-core/: README.md  build.gradle.kts  consumer-rules.pro
poseidon-core/src/main/: AndroidManifest.xml
poseidon-core/src/main/java/tech/ssemaj/poseidon/runtime/: Action.kt  Decision.kt  EgressEvent.kt  Glob.kt  HostIpCacheSeeder.kt  NativeBridge.kt  Observer.kt  (+10 more)
poseidon-core/src/test/resources/: glob_vectors.txt
poseidon-gradle-plugin/: build.gradle.kts  settings.gradle.kts
poseidon-native/: README.md  build.gradle.kts  consumer-rules.pro
poseidon-native/src/main/cpp/: CMakeLists.txt  event_ring.c  event_ring.h  interpose.c  jni_bridge.c  policy_eval.c  poseidon.ver  seccomp_supervisor.c  shim.c  shim_internal.h
poseidon-native/src/main/cpp/audit/: event_ring.c
poseidon-native/src/main/cpp/dns/: dns_cache.c
poseidon-native/src/main/cpp/include/: event_ring.h  host_match.h  shim_internal.h
poseidon-native/src/main/cpp/jni/: jni_bridge.c
poseidon-native/src/main/cpp/linker/: poseidon.ver
poseidon-native/src/main/cpp/policy/: policy_eval.c
poseidon-native/src/main/cpp/seccomp/: seccomp_supervisor.c
poseidon-native/src/main/cpp/test/: CMakeLists.txt  glob_equiv_check.py  glob_test.c  ring_test.c
poseidon-runtime/: build.gradle.kts  consumer-rules.pro
poseidon-runtime/src/main/cpp/: CMakeLists.txt  poseidon.ver  shim.c
poseidon-seccomp/: README.md  build.gradle.kts
(+85 files in other folders)
